# reposcan

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  scan_output.txt  scan_output2.txt  test_output.txt  test_output2.txt
.github/workflows/: tests.yml
docs/: launch-copy.md
hooks/: pre-commit  pre-push
signatures/: ip_leak_risk.json  malware.json
src/reposcan/: __init__.py  __main__.py  actions.py  cli.py  hooks.py  matcher.py  reporter.py  scanner.py  signatures.py  theme.py
src/reposcan.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_actions.py  test_cli.py  test_loading.py  test_matcher.py  test_scanner.py  test_theme.py
